--- a/src/includes/common/Data.pug
+++ b/src/includes/common/Data.pug
@@ -321,3 +321,12 @@
       ],
     },
   ]
+
+  const dataJobCards = [
+    { order: '01', dark: false, statusLabel: 'Chậm', statusType: 'btn-soft-warning' },
+    { order: '02', dark: true, statusLabel: 'Ổn', statusType: 'btn-soft-success' },
+    { order: '03', dark: false, statusLabel: 'Huỷ', statusType: 'btn-soft-danger' },
+    { order: '04', dark: true, statusLabel: 'Chậm', statusType: 'btn-soft-warning' },
+    { order: '05', dark: false, statusLabel: 'Ổn', statusType: 'btn-soft-success' },
+    { order: '06', dark: true, statusLabel: 'Huỷ', statusType: 'btn-soft-danger' },
+  ]
