--- a/src/khai-bao-dang-ky-xuat-ban-pham.pug
+++ b/src/khai-bao-dang-ky-xuat-ban-pham.pug
@@ -370,7 +370,7 @@ block pages
                           tbody 
                             each item in [1,2,3,4,5]
                               tr 
-                                td.text-center= item
+                                td.text-center.Table-index= item
                                 td 
                                   .Table-icon   
                                     if (item % 2 === 0)
