--- a/src/quan-ly-bieu-mau-khai-bao-bieu-mau-theo-quy-trinh.pug
+++ b/src/quan-ly-bieu-mau-khai-bao-bieu-mau-theo-quy-trinh.pug
@@ -47,9 +47,9 @@ block pages
                 +Card({ className: ' js-arrange-item', title: 'Tên CỤM THÔNG TIN: Cụm Dữ liệu 1 (chưa đặt tên)', sortable: true, noPadding: true })
                   .card-body
                     .row 
-                      .col-md-6.col-sm-12
+                      .col-md-6.col-sm-12.mb-3
                         +Input({ label: 'Tiêu đề cụm thông tin', placeholder: 'vd: Thông tin cơ bản' })
-                      .col-md-6.col-sm-12
+                      .col-md-6.col-sm-12.mb-3
                         +Select({
                             label: 'Kiểu độ rộng nhóm',
                             placeholder: '1 cột / 2 cột / 3 cột ',
@@ -109,9 +109,9 @@ block pages
                 +Card({ className: ' js-arrange-item', title: 'Tên cụm THÔNG TIN: MÔ TẢ BẢN THẢO', sortable: true, noPadding: true })
                   .card-body
                     .row 
-                      .col-md-6.col-sm-12
+                      .col-md-6.col-sm-12.mb-3
                         +Input({ label: 'Tiêu đề cụm thông tin', placeholder: 'vd: Thông tin cơ bản' })
-                      .col-md-6.col-sm-12
+                      .col-md-6.col-sm-12.mb-3
                         +Select({
                             label: 'Kiểu độ rộng nhóm',
                             placeholder: '1 cột / 2 cột / 3 cột ',
