--- a/src/xem-file-dinh-kem.pug
+++ b/src/xem-file-dinh-kem.pug
@@ -62,7 +62,7 @@ block pages
                     tbody 
                       each item in [1,2,3,4,5]
                         tr 
-                          td= item
+                          td.text-center.Table-index= item
                           td Bản thảo - 1. Phê duyệt đề tài - Hoàng Hôn Của Phía Đông.docx 
                           td 
                             .center
