--- a/src/assets/css/components/Card.scss
+++ b/src/assets/css/components/Card.scss
@@ -78,6 +78,15 @@
     padding: 15px;
   }
 
+  &-collapse-arrow {
+    transition: $common-transition;
+    transform: rotate(0);
+
+    &.active {
+      transform: rotate(180deg);
+    }
+  }
+
   &-collapse-arrow,
   &-sortable-arrow {
     cursor: pointer;
@@ -89,6 +98,24 @@
     font-size: 14px;
     line-height: 20px;
     color: #ffffff !important;
+  }
+
+  .card-header {
+    &.with-buttons {
+      @media (max-width: 768px) {
+        flex-direction: column;
+        align-items: flex-start !important;
+
+        .Card-editable-btns {
+          margin-top: 8px;
+          margin-left: unset !important;
+        }
+      }
+    }
+  }
+
+  &-editable-btns {
+    column-gap: 12px;
   }
 
   &-editable-btn {
