--- a/src/assets/css/components/Table.scss
+++ b/src/assets/css/components/Table.scss
@@ -1,6 +1,10 @@
 .Table {
   overflow: auto;
 
+  &-index {
+    width: 46px;
+  }
+
   &-empty {
     padding: 12px 15px;
     text-transform: uppercase;
@@ -43,7 +47,7 @@
     &.birthday {
       span {
         color: #FFE9DF;
-        border-color: #FD7E14;
+        -webkit-text-stroke-color: #FD7E14;
         transform: translate(15%, 20%);
       }
 
@@ -60,7 +64,7 @@
         position: absolute;
         z-index: 3;
         top: 14px;
-        left: 5px;
+        left: 3px;
         content: '';
       }
 
