--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -368,6 +368,10 @@ template {
   padding: 4px 8px;
   border-radius: 5px;
 }
+.Button-tag {
+  user-select: none;
+  pointer-events: none;
+}
 .Button.circle {
   border-radius: 50%;
 }
@@ -451,6 +455,13 @@ template {
 .Card .card-body {
   padding: 15px;
 }
+.Card-collapse-arrow {
+  transition: 0.3s ease;
+  transform: rotate(0);
+}
+.Card-collapse-arrow.active {
+  transform: rotate(180deg);
+}
 .Card-collapse-arrow, .Card-sortable-arrow {
   cursor: pointer;
   font-size: 16px;
@@ -460,6 +471,19 @@ template {
   font-size: 14px;
   line-height: 20px;
   color: #ffffff !important;
+}
+@media (max-width: 768px) {
+  .Card .card-header.with-buttons {
+    flex-direction: column;
+    align-items: flex-start !important;
+  }
+  .Card .card-header.with-buttons .Card-editable-btns {
+    margin-top: 8px;
+    margin-left: unset !important;
+  }
+}
+.Card-editable-btns {
+  column-gap: 12px;
 }
 .Card-editable-btn.Button {
   font-size: 12px;
@@ -533,6 +557,9 @@ template {
 .Table {
   overflow: auto;
 }
+.Table-index {
+  width: 46px;
+}
 .Table-empty {
   padding: 12px 15px;
   text-transform: uppercase;
@@ -574,7 +601,7 @@ template {
 }
 .Table-order.birthday span {
   color: #FFE9DF;
-  border-color: #FD7E14;
+  -webkit-text-stroke-color: #FD7E14;
   transform: translate(15%, 20%);
 }
 .Table-order.birthday::before {
@@ -589,7 +616,7 @@ template {
   position: absolute;
   z-index: 3;
   top: 14px;
-  left: 5px;
+  left: 3px;
   content: "";
 }
 .Table table {
@@ -862,10 +889,10 @@ template {
 
 .Tab {
   overflow: auto;
-  border-radius: 0.5rem;
 }
 .Tab .nav-segment {
   flex-wrap: nowrap;
+  border-radius: 0 !important;
 }
 .Tab .nav-segment .nav-link {
   border: 1px solid transparent;
@@ -991,6 +1018,12 @@ template {
   border-top: 1px solid #E7EAF3;
   min-height: 40px;
 }
+@media (max-width: 768px) {
+  .FieldEditable-header {
+    flex-wrap: wrap;
+    border-width: 3px;
+  }
+}
 .FieldEditable-header-item {
   display: flex;
   align-items: center;
@@ -1002,10 +1035,22 @@ template {
   border-right: 1px solid #E7EAF3;
 }
 .FieldEditable-header-item:nth-child(1), .FieldEditable-header-item:nth-child(2) {
-  width: 25%;
+  max-width: 25%;
+  flex: 0 0 25%;
 }
 .FieldEditable-header-item:last-child {
-  width: 50%;
+  max-width: 50%;
+  flex: 0 0 50%;
+}
+@media (max-width: 768px) {
+  .FieldEditable-header-item {
+    flex: 0 0 100% !important;
+    max-width: 100% !important;
+    border: none !important;
+  }
+  .FieldEditable-header-item:not(:last-child) {
+    border-bottom: 1px solid #E7EAF3 !important;
+  }
 }
 .FieldEditable-header-item-actions .Button {
   font-size: 12px;
@@ -1141,11 +1186,12 @@ template {
 .DashboardPage-birthday-text {
   font-weight: 700;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 21px;
   color: #132144;
 }
 .DashboardPage-birthday-text small {
   font-size: 12px;
+  line-height: 20px;
 }
 .DashboardPage-birthday-user {
   column-gap: 12px;
