--- a/src/includes/components/Card.pug
+++ b/src/includes/components/Card.pug
@@ -1,7 +1,7 @@
 mixin Card({ className = '', style, id = '', block, title, size = 'middle', noPadding, dark, orange, fullHeight, iconHeader, accordionId, accordionParentId, showDate, sortable, editable })
   .Card.card(id=`${id}` class=`card-${size} ${dark ? 'dark' : ''} ${orange ? 'orange' : ''} ${className} ${fullHeight ? 'full-height' : ''}` style=style || false) 
     if (title)
-      .card-header.d-flex.align-items-center.justify-content-between
+      .card-header.d-flex.align-items-center.justify-content-between(class=`${editable ? 'with-buttons' : ''}`)
         h3.card-header-title.d-flex.align-items-center
           if (iconHeader)
             i(class=`${iconHeader}`)
@@ -30,8 +30,9 @@ mixin Card({ className = '', style, id = '', block, title, size = 'middle', noPa
             <i class="tio-chevron-down"></i>
 
         if (editable)
-          +Button({ className: 'Card-editable-btn ml-auto', title: 'Thêm Field mặc định', variant: 'btn-white' })
-          +Button({ className: 'Card-editable-btn ml-3', title: 'Thêm Field tùy chỉnh', variant: 'btn-white' })
+          .Card-editable-btns.flex.ml-auto
+            +Button({ className: 'Card-editable-btn', title: 'Thêm Field mặc định', variant: 'btn-white' })
+            +Button({ className: 'Card-editable-btn', title: 'Thêm Field tùy chỉnh', variant: 'btn-white' })
 
     if (accordionParentId)
       .collapse.show(id=`${accordionId}` data-parent=`#${accordionParentId}`)
