--- a/src/index.pug
+++ b/src/index.pug
@@ -17,9 +17,10 @@ block pages
             .row.mb-3
               .col-lg-6.pr-lg-2
                 +Card({ className: 'mb-3', title: 'Việc sắp đến hạn', fullHeight: true, noPadding: true })
-                  .DashboardPage-job
-                    each item in [1,2,3,4,5]
-                      +JobCard({ order: `0${item}`, dark: item % 2 === 0 })
+                  .overflow-auto(style="max-height: 875px;")
+                    .DashboardPage-job
+                      each item in dataJobCards
+                        +JobCard(item)
 
                   //- +Table({})
                   //-   thead 
@@ -43,9 +44,10 @@ block pages
 
               .col-lg-6.pl-lg-2
                 +Card({ className: 'mb-3', title: 'Việc quá hạn', fullHeight: true, noPadding: true })
-                  .DashboardPage-job
-                    each item in [1,2,3,4,5]
-                      +JobCard({ dark: item % 2 === 0 })
+                  .overflow-auto(style="max-height: 875px;")
+                    .DashboardPage-job
+                      each item in dataJobCards
+                        +JobCard(item)
 
                   //- +Table({ emptyText: 'Chưa có việc nào' })
                   //-   thead 
@@ -59,9 +61,10 @@ block pages
             .row 
               .col-lg-6.pr-lg-2
                 +Card({ className: 'mb-3', title: 'Sách mới đăng ký', fullHeight: true, noPadding: true })
-                  .DashboardPage-job
-                    each item in [1,2,3,4,5]
-                      +JobCard({ order: `0${item}`, dark: item % 2 === 0 })
+                  .overflow-auto(style="max-height: 875px;")
+                    .DashboardPage-job
+                      each item in dataJobCards
+                        +JobCard(item)
 
                   //- +Table({})
                   //-   thead 
@@ -85,9 +88,10 @@ block pages
 
               .col-lg-6.pl-lg-2
                 +Card({ className: 'mb-3', title: 'Việc của bạn', fullHeight: true, noPadding: true })
-                  .DashboardPage-job
-                    each item in [1,2,3,4,5]
-                      +JobCard({ dark: item % 2 === 0 })
+                  .overflow-auto(style="max-height: 875px;")
+                    .DashboardPage-job
+                      each item in dataJobCards
+                        +JobCard(item)
                     
 
         .col-lg-3.pl-lg-2
