--- a/src/includes/common/Data.pug
+++ b/src/includes/common/Data.pug
@@ -323,6 +323,15 @@
   ]
 
   const dataJobCards = [
+    { order: 'P', dark: false, statusLabel: 'Chậm', statusType: 'btn-soft-warning' },
+    { order: 'P', dark: true, statusLabel: 'Ổn', statusType: 'btn-soft-success' },
+    { order: 'P', dark: false, statusLabel: 'Huỷ', statusType: 'btn-soft-danger' },
+    { order: 'P', dark: true, statusLabel: 'Chậm', statusType: 'btn-soft-warning' },
+    { order: 'P', dark: false, statusLabel: 'Ổn', statusType: 'btn-soft-success' },
+    { order: 'P', dark: true, statusLabel: 'Huỷ', statusType: 'btn-soft-danger' },
+  ]
+
+  const dataBooksCards = [
     { order: '01', dark: false, statusLabel: 'Chậm', statusType: 'btn-soft-warning' },
     { order: '02', dark: true, statusLabel: 'Ổn', statusType: 'btn-soft-success' },
     { order: '03', dark: false, statusLabel: 'Huỷ', statusType: 'btn-soft-danger' },
