--- a/src/xem-truoc-nguoi-duyet-bieu-in.pug
+++ b/src/xem-truoc-nguoi-duyet-bieu-in.pug
@@ -9,7 +9,7 @@ block pages
       .row 
         .col-lg-9
           +Card({ id: 'bieuin', noPadding: true })
-            .PreviewPage-submit.d-flex.flex-wrap.mb-3.border
+            .PreviewPage-submit.d-flex.flex-wrap.border
               +Button({ title: 'Duyệt', icon: 'tio-checkmark-square-outlined mr-1', variant: 'btn-primary' })  
               +Button({ title: 'Từ chối', icon: 'tio-clear mr-1', variant: 'btn-soft-dark' })  
               +Button({ title: 'Comment', icon: 'tio-sms-chat-outlined mr-1', variant: 'btn-soft-dark' })  
