--- a/src/assets/css/components/JobCard.scss
+++ b/src/assets/css/components/JobCard.scss
@@ -55,9 +55,10 @@
         column-gap: 8px;
 
         .Button {
+          width: 58px;
           padding: 2px 14px;
           font-size: 10px;
-          font-weight: 600;
+          font-weight: 400;
           line-height: 12px;
           border-radius: 4px;
         }
