--- a/src/assets/css/pages/FormPage.scss
+++ b/src/assets/css/pages/FormPage.scss
@@ -37,6 +37,11 @@
       display: flex;
       justify-content: center;
       padding: 10px 4px;
+
+      @media (max-width: 991px) {
+        display: block;
+        padding: 10px 15px;
+      }
     }
 
     .col-3 {
