--- a/src/index.pug
+++ b/src/index.pug
@@ -8,91 +8,41 @@ block pages
     .content.container-fluid
       .row
         .col-lg-9.pr-lg-2
-          +Card({})
-            +Card({ className: 'mb-3', title: 'Xuất bản phẩm theo công đoạn' })
-              .DashboardPage-total-cards.d-flex.flex-wrap
-                each item in dataDashboardTotalCard
-                  +DashboardTotalCard(item)
+          +Card({ className: 'mb-3', title: 'Xuất bản phẩm theo công đoạn' })
+            .DashboardPage-total-cards.d-flex.flex-wrap
+              each item in dataDashboardTotalCard
+                +DashboardTotalCard(item)
 
-            .row.mb-3
-              .col-lg-6.pr-lg-2
-                +Card({ className: 'mb-3', title: 'Việc sắp đến hạn', fullHeight: true, noPadding: true })
-                  .overflow-auto(style="max-height: 875px;")
-                    .DashboardPage-job
-                      each item in dataJobCards
-                        +JobCard(item)
+          .row.mb-3
+            .col-lg-6.pr-lg-2
+              +Card({ className: 'mb-3', title: 'Việc sắp đến hạn', fullHeight: true, noPadding: true })
+                .overflow-y-auto(style="max-height: 875px;")
+                  .DashboardPage-job
+                    each item in dataJobCards
+                      +JobCard(item)
 
-                  //- +Table({})
-                  //-   thead 
-                  //-     tr 
-                  //-       th.text-center #
-                  //-       th ĐỀ TÀI
-                  //-       th Đầu việc
-                  //-       th.text-center Cần
-                  //-   tbody 
-                  //-     each item in [1,2,3,4]
-                  //-       tr 
-                  //-         td.text-center= item
-                  //-         td 
-                  //-           .Table-link.ellipsis Thế giới bên trong bất động sản: Mua, bán và tạo lợi nhuận trong thị trường bất động sản.
-                  //-         td(style="color: #28A745").text-nowrap Phê duyệt đề tài
-                  //-         td
-                  //-           .center
-                  //-             +Button({ title: 'Duyệt', variant: item % 2 === 0 ? 'btn-success' : 'btn-outline-info', badge: true })
+            .col-lg-6.pl-lg-2
+              +Card({ className: 'mb-3', title: 'Việc quá hạn', fullHeight: true, noPadding: true })
+                .overflow-y-auto(style="max-height: 875px;")
+                  .DashboardPage-job
+                    each item in dataJobCards
+                      +JobCard(item)
 
-                            
+          .row 
+            .col-lg-6.pr-lg-2
+              +Card({ className: 'mb-3', title: 'Sách mới đăng ký', fullHeight: true, noPadding: true })
+                .overflow-y-auto(style="max-height: 875px;")
+                  .DashboardPage-job
+                    each item in dataBooksCards
+                      +JobCard(item)
 
-              .col-lg-6.pl-lg-2
-                +Card({ className: 'mb-3', title: 'Việc quá hạn', fullHeight: true, noPadding: true })
-                  .overflow-auto(style="max-height: 875px;")
-                    .DashboardPage-job
-                      each item in dataJobCards
-                        +JobCard(item)
+            .col-lg-6.pl-lg-2
+              +Card({ className: 'mb-3', title: 'Việc của bạn', fullHeight: true, noPadding: true })
+                .overflow-y-auto(style="max-height: 875px;")
+                  .DashboardPage-job
+                    each item in dataJobCards
+                      +JobCard(item)
 
-                  //- +Table({ emptyText: 'Chưa có việc nào' })
-                  //-   thead 
-                  //-     tr 
-                  //-       th.text-center #
-                  //-       th ĐỀ TÀI
-                  //-       th Đầu việc
-                  //-       th.text-center
-                  //-         <i class="tio-alarm"></i>
-
-            .row 
-              .col-lg-6.pr-lg-2
-                +Card({ className: 'mb-3', title: 'Sách mới đăng ký', fullHeight: true, noPadding: true })
-                  .overflow-auto(style="max-height: 875px;")
-                    .DashboardPage-job
-                      each item in dataJobCards
-                        +JobCard(item)
-
-                  //- +Table({})
-                  //-   thead 
-                  //-     tr 
-                  //-       th.text-center #
-                  //-       th Tên sách
-                  //-       th Tác giả
-                  //-       th.text-center
-                  //-         <i class="tio-alarm"></i>
-                    
-                  //-   tbody 
-                  //-     each item in [1,2,3,4,5,6,7,8,9,10]
-                  //-       tr 
-                  //-         td.text-center
-                  //-           .Table-order
-                  //-             span= `${item < 10 ? '0' : ''}${item}`
-                  //-         td 
-                  //-           .Table-link.ellipsis Thế giới bên trong bất động sản: Mua, bán và tạo lợi nhuận trong thị trường bất động sản.
-                  //-         td(style="color: #28A745").text-nowrap Phan Trọng Tuệ
-                  //-         td 23/11/22
-
-              .col-lg-6.pl-lg-2
-                +Card({ className: 'mb-3', title: 'Việc của bạn', fullHeight: true, noPadding: true })
-                  .overflow-auto(style="max-height: 875px;")
-                    .DashboardPage-job
-                      each item in dataJobCards
-                        +JobCard(item)
-                    
 
         .col-lg-3.pl-lg-2
           +Card({ className: 'mb-3', title: 'Nhân viên online gần đây', size: 'small', dark: true, noPadding: true })
